# parafold

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTRUCTIONS_MANUAL.md  LICENSE  README.md  SAFETY.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.d2  index.md
experiments/_wip/: README.md
scripts/: manual_steps.sh  release.sh
src/parafold/: __init__.py  __main__.py  cli.py  facade.py
src/parafold/core/: __init__.py  boltz_runner.py  types.py
src/parafold/ensemble/: __init__.py  sampler.py
src/parafold/pmhc/: __init__.py  embedding.py  head.py  register.py
src/parafold/viz_api/: __init__.py  molstar.py
tests/: conftest.py  test_cli.py  test_core.py  test_ensemble.py  test_facade.py  test_pmhc.py  test_viz_api.py
