[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "parafold"
version = "0.0.1"
description = "TCR-pMHC repertoire structural predictor built atop Boltz-2"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ParaFold contributors" }]
keywords = [
    "bioinformatics",
    "structural-biology",
    "TCR",
    "pMHC",
    "immunology",
    "protein-structure-prediction",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "biotite>=0.40",
    "hydra-core>=1.3",
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
umap = ["umap-learn>=0.5"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.4",
    "hypothesis>=6.100",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/runza/parafold"
Issues = "https://github.com/runza/parafold/issues"
Documentation = "https://github.com/runza/parafold#readme"

[project.scripts]
parafold = "parafold.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/parafold"]

[tool.hatch.build.targets.wheel.force-include]
"src/parafold/py.typed" = "parafold/py.typed"

[tool.hatch.build.targets.sdist]
include = ["src/parafold", "tests", "README.md", "LICENSE", "pyproject.toml", "CITATION.cff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
    # Treat our own warnings as errors so we never ship a deprecation in-tree.
    "error::DeprecationWarning:parafold.*",
    "error::PendingDeprecationWarning:parafold.*",
    # Tolerate upstream churn from dependencies.
    "default::DeprecationWarning",
    "default::PendingDeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["biotite.*", "umap.*", "hydra.*", "scipy.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "ANN", "RUF", "SIM", "PT"]
# RUF001/RUF002: α and β are intentional — standard immunology nomenclature
# for TCRα / TCRβ chains. We do not want to confuse them with Latin 'a' / 'b'.
ignore = ["RUF001", "RUF002"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
# pMHCInput and pMHCConditionalHead follow domain convention (peptide-MHC).
# The lowercase 'p' is the standard immunology spelling.
"src/parafold/core/types.py" = ["N801"]
"src/parafold/pmhc/head.py" = ["N801"]
